--- a/config/v1/0000_10_config-operator_01_apiserver.crd.yaml
+++ b/config/v1/0000_10_config-operator_01_apiserver.crd.yaml
@@ -71,14 +71,16 @@ spec:
                       like 'Default', but logs request and response HTTP payloads
                       for write requests (create, update, patch). - AllRequestBodies:
                       like 'WriteRequestBodies', but also logs request and response
-                      HTTP payloads for read requests (get, list). \n If unset, the
-                      'Default' profile is used as the default."
+                      HTTP payloads for read requests (get, list). - UserRequests:
+                      logs resource requests from system:authenticated:oauth users.
+                      \n If unset, the 'Default' profile is used as the default."
                     type: string
                     default: Default
                     enum:
                     - Default
                     - WriteRequestBodies
                     - AllRequestBodies
+                    - UserRequests
               clientCA:
                 description: 'clientCA references a ConfigMap containing a certificate
                   bundle for the signers that will be recognized for incoming client
